# claude-autopilot

./: README.md  autopilot.example.yaml  autopilot.py  daily_report.py  healthcheck.py  notify.py  pyproject.toml  setup-repo.sh  slack-app-manifest.yaml  slack.py
examples/game-agent/: autopilot.yaml  start-blender.sh
examples/game-agent/docs/: cookbook.md  decisions.md
examples/game-agent/docs/api-reference/: blender-bpy-reference.md  mcp-sdk-patterns.md  unity-editor-api-reference.md
examples/game-agent/docs/patterns/: ICommandHandler.cs  blender-tool-template.py  unity-handler-template.cs
examples/game-agent/docs/schemas/: asset-manifest-schema.json
